# ml_server

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
client/: client.ipynb  demo copy.ipynb  demo.ipynb
server/: main.py  models.py
server/storage/: logreg_model.pkl
